@@ -1,3 +1,11 @@
+2026-01-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/Attributes.R: Additional #nocov tags for new(er) code
+	* R/Rcpp.package.skeleton.R: Idem
+	* R/RcppLdpath.R: Idem
+	* R/asis.R: Idem
+	* R/inline.R: Idem
+
 2025-12-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/tinytest.R: Refine decision of when not to run all tests even
